<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>nl.tudelft.ti2206.group9</groupId>
  <artifactId>ti2206-sem-group-9</artifactId>
  <version>1.4.1</version>
  <repositories>
    <repository>
      <id>maven-central-repo</id>
      <url>http://repo1.maven.org/maven2</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>2.0.5-beta</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testfx</groupId>
      <artifactId>testfx-core</artifactId>
      <version>4.0.1-alpha</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testfx</groupId>
      <artifactId>testfx-junit</artifactId>
      <version>4.0.1-alpha</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.googlecode.json-simple</groupId>
      <artifactId>json-simple</artifactId>
      <version>1.1</version>
    </dependency>
  </dependencies>
  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>2.6</version>
        <reportSets>
          <reportSet>
            <id>main_checks</id>
            <reports>
              <report>checkstyle</report>
            </reports>
            <configuration>
              <sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
              <includeTestSourceDirectory>false</includeTestSourceDirectory>
              <configLocation>checkstyle.xml</configLocation>
              <outputDirectory>${project.reporting.outputDirectory}/main-checks/</outputDirectory>
            </configuration>
          </reportSet>
          <reportSet>
            <id>test_checks</id>
            <reports>
              <report>checkstyle</report>
            </reports>
            <configuration>
              <sourceDirectory></sourceDirectory>
              <testSourceDirectory>${project.build.testSourceDirectory}</testSourceDirectory>
              <includeTestSourceDirectory>true</includeTestSourceDirectory>
              <configLocation>checkstyle-test.xml</configLocation>
              <outputDirectory>${project.reporting.outputDirectory}/test-checks/</outputDirectory>
            </configuration>
          </reportSet>
        </reportSets>
      </plugin>
    </plugins>
  </reporting>
  <build>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.3</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <compilerArgument></compilerArgument>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.18.1</version>
        <configuration>
          <reuseForks>false</reuseForks>
          <additionalClasspathElements>
            <additionalClasspathElement>${java.home}/lib/ext/jfxrt.jar</additionalClasspathElement>
          </additionalClasspathElements>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.6</version>
        <executions>
          <execution>
            <id>default-jar</id>
            <!-- put the default-jar in the none phase to skip it from being 
              created -->
            <phase>none</phase>
          </execution>
          <execution>
            <id>jar-shaft-escape</id>
            <goals>
              <goal>jar</goal>
            </goals>
            <phase>package</phase>
            <configuration>
              <finalName>ShaftEscape-${project.version}</finalName>
              <archive>
                <manifest>
                  <mainClass>nl.tudelft.ti2206.group9.ShaftEscape</mainClass>
                </manifest>
              </archive>
            </configuration>
          </execution>
          <execution>
            <id>jar-highscore-server</id>
            <goals>
              <goal>jar</goal>
            </goals>
            <phase>package</phase>
            <configuration>
              <finalName>HighscoreServer-${project.version}</finalName>
              <archive>
                <manifest>
                  <mainClass>nl.tudelft.ti2206.group9.server.HighscoreServer</mainClass>
                </manifest>
              </archive>
              <excludes>
                <exclude>*</exclude>
              </excludes>
              <includes>
                <include>**/nl/tudelft/ti2206/group9/server/*</include>
              </includes>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>2.16</version>
        <configuration>
          <failOnViolation>false</failOnViolation>
          <configLocation>checkstyle.xml</configLocation>
          <includeTestSourceDirectory>false</includeTestSourceDirectory>
        </configuration>
        <executions>
          <execution>
            <id>verify-style</id>
            <phase>process-classes</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
        <version>3.5</version>
        <configuration>
          <format>xml</format>
        </configuration>
        <executions>
          <execution>
            <id>verify-pmd</id>
            <phase>process-classes</phase>
            <goals>
              <goal>pmd</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>findbugs-maven-plugin</artifactId>
        <version>3.0.1</version>
        <configuration>
          <failOnError>false</failOnError>
        </configuration>
        <executions>
          <execution>
            <id>verify-findbugs</id>
            <phase>process-classes</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
